aligned the h5 tag correctly

--- a/css/styles.css
+++ b/css/styles.css
@@ -98,6 +98,10 @@ h2 {
   padding-left: 50px;
 }
 
+h5{
+  padding-left: 50px;
+}
+
 .f {
   display: block;
   padding: 9px;
